# AltDSS-Python

./: .gitignore  Architecture.html  LICENSE  README.html  README.md  changelog.html  enumerations.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
_sources/: changelog.md  enumerations.md
_sources/apidocs/: index.rst
_sources/apidocs/altdss/: altdss.AltDSS.md  (+74 more)
_sources/examples/: Batches.ipynb  GettingStarted.ipynb
altdss/: AltDSS.py  ArrayProxy.py  AutoTrans.py  Batch.py  Bus.py  CNData.py  CapControl.py  Capacitor.py  CircuitElement.py  ControlQueue.py  DSSObj.py  DynamicExp.py  ESPVLControl.py  EnergyMeter.py  EnergyMeterExtras.py  Error.py  ExpControl.py  Fault.py  Fuse.py  GICLine.py  GICTransformer.py  GICsource.py  GenDispatcher.py  Generator.py  GrowthShape.py  IndMach012.py  InvControl.py  Isource.py  Line.py  LineCode.py  LineGeometry.py  LineSpacing.py  Load.py  LoadShape.py  LoadShapeExtras.py  Monitor.py  MonitorExtras.py  Obj.py  PCElement.py  PDElement.py  (+32 more)
apidocs/: index.html
apidocs/altdss/: altdss.AltDSS.html  altdss.ArrayProxy.html  altdss.AutoTrans.html  altdss.Batch.html  altdss.Bus.html  altdss.CNData.html  altdss.CapControl.html  altdss.Capacitor.html  altdss.CircuitElement.html  altdss.ControlQueue.html  altdss.DSSObj.html  altdss.DynamicExp.html  altdss.ESPVLControl.html  altdss.EnergyMeter.html  altdss.EnergyMeterExtras.html  altdss.Error.html  altdss.ExpControl.html  altdss.Fault.html  altdss.Fuse.html  altdss.GICLine.html  altdss.GICTransformer.html  altdss.GICsource.html  altdss.GenDispatcher.html  altdss.Generator.html  altdss.GrowthShape.html  altdss.IndMach012.html  altdss.InvControl.html  altdss.Isource.html  altdss.Line.html  altdss.LineCode.html  altdss.LineGeometry.html  altdss.LineSpacing.html  altdss.Load.html  altdss.LoadShape.html  altdss.LoadShapeExtras.html  altdss.Monitor.html  altdss.MonitorExtras.html  altdss.Obj.html  altdss.PCElement.html  altdss.PDElement.html  (+34 more)
ci/: build_linux.sh  build_wheel.sh  test_wheel.sh
docs/: Architecture.md  Makefile  README.md  changelog.md  conf.py  dss.rst  index.md  index.rst  make.bat  obj.rst
docs/examples/: GettingStarted.ipynb
examples/: Batches.html  GettingStarted.html
tests/: test_alt.py  test_alt_em.py  test_arrayproxy.py  test_batch.py  test_lib.py  test_obj.py  test_zip.py
